[구름4.0] 소스 업데이트 - warning 코드 제거, jdk17 코드 개선 - 불필요 예외처리, 조건문 제거
Change-Id: Ifce8e8b9bae16ffb7bf1d6caabc74e84b30758d2