@@ -16,22 +16,7 @@
 
 package kr.gooroom.gpms.user.service.impl;
 
-import java.sql.SQLException;
-import java.util.HashMap;
-import java.util.List;
-import java.util.stream.Collectors;
-
 import jakarta.annotation.Resource;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.crypto.password.Pbkdf2PasswordEncoder;
-import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Propagation;
-import org.springframework.transaction.annotation.Transactional;
-import org.springframework.transaction.interceptor.TransactionAspectSupport;
-
 import kr.gooroom.gpms.account.service.ActHistoryVO;
 import kr.gooroom.gpms.common.GPMSConstants;
 import kr.gooroom.gpms.common.service.ResultPagingVO;
@@ -41,6 +26,18 @@ import kr.gooroom.gpms.common.utils.LoginInfoHelper;
 import kr.gooroom.gpms.common.utils.MessageSourceHelper;
 import kr.gooroom.gpms.user.service.AdminUserService;
 import kr.gooroom.gpms.user.service.AdminUserVO;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.crypto.password.Pbkdf2PasswordEncoder;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.transaction.interceptor.TransactionAspectSupport;
+
+import java.sql.SQLException;
+import java.util.HashMap;
+import java.util.List;
 
 /**
  * administrator user management service implements class
@@ -61,7 +58,7 @@ public class AdminUserServiceImpl implements AdminUserService {
 	@Autowired
 	private Pbkdf2PasswordEncoder passwordEncoder;
 
-	private String[][] RULEINFOS = { { "client_admin", "client_admin", "isClientAdmin" },
+	private final String[][] RULEINFOS = { { "client_admin", "client_admin", "isClientAdmin" },
 			{ "user_admin", "user_admin", "isUserAdmin" }, { "desktop_admin", "desktop_admin", "isDesktopAdmin" }, 
 			{ "notice_admin", "notice_admin", "isNoticeAdmin" },{ "portable_admin", "portable_admin", "isPortableAdmin" }};
 
@@ -69,8 +66,7 @@ public class AdminUserServiceImpl implements AdminUserService {
 	private void saveClientConfiguration(AdminUserVO adminUserVO) throws SQLException {
 		long cnt = -1;
 		// save client configuration information
-		for (int i = 0; i < RULEINFOS.length; i++) {
-			String[] items = RULEINFOS[i];
+		for (String[] items : RULEINFOS) {
 			cnt = adminUserDao.insertOrUpdateAdminRule(adminUserVO.getAdminId(), items[0], items[1],
 					adminUserVO.getValueByString(items[2]), LoginInfoHelper.getUserId());
 
@@ -86,7 +82,7 @@ public class AdminUserServiceImpl implements AdminUserService {
 			cnt = -1;
 			for (int i = 0; i < adminUserVO.getConnIps().size(); i++) {
 				cnt = adminUserDao.insertAdminUserConnIp(adminUserVO.getAdminId(), adminUserVO.getRegUserId(),
-						(String) adminUserVO.getConnIps().get(i));
+						adminUserVO.getConnIps().get(i));
 				if (cnt < 0) {
 					throw new SQLException();
 				}
@@ -100,7 +96,7 @@ public class AdminUserServiceImpl implements AdminUserService {
 			cnt = -1;
 			for (int i = 0; i < adminUserVO.getGrpIds().size(); i++) {
 				cnt = adminUserDao.insertAdminUserGrpId(adminUserVO.getAdminId(), adminUserVO.getRegUserId(),
-						(String) adminUserVO.getGrpIds().get(i));
+						adminUserVO.getGrpIds().get(i));
 				if (cnt < 0) {
 					throw new SQLException();
 				}
@@ -114,7 +110,7 @@ public class AdminUserServiceImpl implements AdminUserService {
 			cnt = -1;
 			for (int i = 0; i < adminUserVO.getDeptCds().size(); i++) {
 				cnt = adminUserDao.insertAdminUserDeptCd(adminUserVO.getAdminId(), adminUserVO.getRegUserId(),
-						(String) adminUserVO.getDeptCds().get(i));
+						adminUserVO.getDeptCds().get(i));
 				if (cnt < 0) {
 					throw new SQLException();
 				}
@@ -127,7 +123,7 @@ public class AdminUserServiceImpl implements AdminUserService {
 	/**
 	 * modify administrator user information data with divided rules.
 	 * 
-	 * @param vo AdminUserVO data bean
+	 * @param adminUserVO AdminUserVO data bean
 	 * @return StatusVO result status
 	 * @throws Exception
 	 */
@@ -154,19 +150,15 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (SQLException sqlEx) {
 			logger.error("error in updateAdminUserData : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), sqlEx.toString());
-			if (statusVO != null) {
-				statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
-			}
+			statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
 			throw sqlEx;
 		} catch (Exception ex) {
 			TransactionAspectSupport.currentTransactionStatus().setRollbackOnly();
 			logger.error("error in updateAdminUserData : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (statusVO != null) {
-				statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
-			}
+			statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
 		}
 		return statusVO;
 	}
@@ -174,12 +166,11 @@ public class AdminUserServiceImpl implements AdminUserService {
 	/**
 	 * modify current administrator user information data (pollingCycle)
 	 * 
-	 * @param vo AdminUserVO data bean
+	 * @param adminUserVO AdminUserVO data bean
 	 * @return StatusVO result status
-	 * @throws Exception
 	 */
 	@Override
-	public StatusVO setCurrentAdminUserData(AdminUserVO adminUserVO) throws Exception {
+	public StatusVO setCurrentAdminUserData(AdminUserVO adminUserVO) {
 		StatusVO statusVO = new StatusVO();
 		try {
 			adminUserVO.setAdminId(LoginInfoHelper.getUserId());
@@ -195,10 +186,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in setCurrentAdminUserData : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (statusVO != null) {
-				statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
-			}
+			statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
 		}
 		return statusVO;
 	}
@@ -206,12 +195,11 @@ public class AdminUserServiceImpl implements AdminUserService {
 	/**
 	 * delete administrator user information data
 	 * 
-	 * @param vo AdminUserVO data bean
+	 * @param adminUserVO AdminUserVO data bean
 	 * @return StatusVO result status
-	 * @throws Exception
 	 */
 	@Override
-	public StatusVO deleteAdminUserData(AdminUserVO adminUserVO) throws Exception {
+	public StatusVO deleteAdminUserData(AdminUserVO adminUserVO) {
 
 		StatusVO statusVO = new StatusVO();
 
@@ -229,10 +217,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in deleteAdminUserData : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (statusVO != null) {
-				statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
-			}
+			statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
 		}
 
 		return statusVO;
@@ -242,15 +228,14 @@ public class AdminUserServiceImpl implements AdminUserService {
 	 * generate administrator user list data
 	 * 
 	 * @return ResultVO result data bean
-	 * @throws Exception
 	 */
 	@Override
-	public ResultVO readAdminUserList() throws Exception {
+	public ResultVO readAdminUserList() {
 		ResultVO resultVO = new ResultVO();
 		try {
 			List<AdminUserVO> re = adminUserDao.selectAdminUserList();
 			if (re != null && re.size() > 0) {
-				AdminUserVO[] row = re.stream().toArray(AdminUserVO[]::new);
+				AdminUserVO[] row = re.toArray(AdminUserVO[]::new);
 				resultVO.setData(row);
 				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_SUCCESS, GPMSConstants.CODE_SELECT,
 						MessageSourceHelper.getMessage("system.common.selectdata")));
@@ -263,10 +248,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in readAdminUserList : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (resultVO != null) {
-				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-			}
+			resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
 		}
 		return resultVO;
 	}
@@ -276,10 +259,9 @@ public class AdminUserServiceImpl implements AdminUserService {
 	 * 
 	 * @param options HashMap data bean
 	 * @return ResultVO result data bean
-	 * @throws Exception
 	 */
 	@Override
-	public ResultPagingVO getAdminUserListPaged(HashMap<String, Object> options) throws Exception {
+	public ResultPagingVO getAdminUserListPaged(HashMap<String, Object> options) {
 		ResultPagingVO resultVO = new ResultPagingVO();
 
 		try {
@@ -298,9 +280,9 @@ public class AdminUserServiceImpl implements AdminUserService {
 						obj.setStatus(MessageSourceHelper.getMessage("user.status.delete"));
 					}
 					return obj;
-				}).collect(Collectors.toList());
+				}).toList();
 
-				AdminUserVO[] row = result.stream().toArray(AdminUserVO[]::new);
+				AdminUserVO[] row = result.toArray(AdminUserVO[]::new);
 				resultVO.setData(row);
 				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_SUCCESS, GPMSConstants.CODE_SELECT,
 						MessageSourceHelper.getMessage("system.common.selectdata")));
@@ -317,10 +299,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in getAdminUserListPaged : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (resultVO != null) {
-				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-			}
+			resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
 		}
 
 		return resultVO;
@@ -331,10 +311,9 @@ public class AdminUserServiceImpl implements AdminUserService {
 	 * 
 	 * @param adminId string user id
 	 * @return ResultVO result data bean
-	 * @throws Exception
 	 */
 	@Override
-	public StatusVO isExistAdminUserId(String adminId) throws Exception {
+	public StatusVO isExistAdminUserId(String adminId) {
 
 		StatusVO statusVO = new StatusVO();
 
@@ -353,10 +332,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in isExistAdminUserId : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (statusVO != null) {
-				statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
-			}
+			statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
 		}
 
 		return statusVO;
@@ -365,7 +342,7 @@ public class AdminUserServiceImpl implements AdminUserService {
 	/**
 	 * create new administrator user data
 	 * 
-	 * @param  AdminUserVO data bean
+	 * @param  adminUserVO AdminUserVO data bean
 	 * @return StatusVO result status
 	 * @throws Exception
 	 */
@@ -395,19 +372,15 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (SQLException sqlEx) {
 			logger.error("error in createAdminUser : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), sqlEx.toString());
-			if (statusVO != null) {
-				statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
-			}
+			statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
 			throw sqlEx;
 		} catch (Exception ex) {
 			TransactionAspectSupport.currentTransactionStatus().setRollbackOnly();
 			logger.error("error in createAdminUser : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (statusVO != null) {
-				statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
-			}
+			statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
 		}
 
 		return statusVO;
@@ -418,15 +391,14 @@ public class AdminUserServiceImpl implements AdminUserService {
 	 * 
 	 * @param adminId string user id
 	 * @return ResultVO result data bean
-	 * @throws Exception
 	 */
 	@Override
-	public ResultVO selectAdminUserData(String adminId) throws Exception {
+	public ResultVO selectAdminUserData(String adminId) {
 
 		ResultVO resultVO = new ResultVO();
 
 		try {
-			HashMap<String, Object> options = new HashMap<String, Object>();
+			HashMap<String, Object> options = new HashMap<>();
 			options.put("adminId", adminId);
 
 			AdminUserVO re = adminUserDao.selectAdminUserData(options);
@@ -451,10 +423,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in selectAdminUserData : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (resultVO != null) {
-				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-			}
+			resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
 		}
 
 		return resultVO;
@@ -466,10 +436,9 @@ public class AdminUserServiceImpl implements AdminUserService {
 	 * @param adminId string user id
 	 * @param adminPw string user password
 	 * @return ResultVO result data bean
-	 * @throws Exception
 	 */
 	@Override
-	public ResultVO getAdminUserAuthAndInfo(String adminId, String adminPw) throws Exception {
+	public ResultVO getAdminUserAuthAndInfo(String adminId, String adminPw) {
 
 		ResultVO resultVO = new ResultVO();
 
@@ -493,10 +462,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in getAdminUserAuthAndInfo : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (resultVO != null) {
-				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-			}
+			resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
 		}
 
 		return resultVO;
@@ -509,10 +476,9 @@ public class AdminUserServiceImpl implements AdminUserService {
 	 * 
 	 * @param options HashMap<String, Object> option data
 	 * @return ResultPagingVO result data bean
-	 * @throws Exception
 	 */
 	@Override
-	public ResultPagingVO getAdminActListPaged(HashMap<String, Object> options) throws Exception {
+	public ResultPagingVO getAdminActListPaged(HashMap<String, Object> options) {
 
 		ResultPagingVO resultVO = new ResultPagingVO();
 
@@ -522,7 +488,7 @@ public class AdminUserServiceImpl implements AdminUserService {
 			long filteredCount = adminUserDao.selectAdminActListFilteredCount(options);
 
 			if (re != null && re.size() > 0) {
-				ActHistoryVO[] row = re.stream().toArray(ActHistoryVO[]::new);
+				ActHistoryVO[] row = re.toArray(ActHistoryVO[]::new);
 				resultVO.setData(row);
 				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_SUCCESS, GPMSConstants.CODE_SELECT,
 						MessageSourceHelper.getMessage("system.common.selectdata")));
@@ -538,10 +504,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in getAdminActListPaged : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (resultVO != null) {
-				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-			}
+			resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
 		}
 
 		return resultVO;
@@ -554,10 +518,9 @@ public class AdminUserServiceImpl implements AdminUserService {
 	 * 
 	 * @param options HashMap data bean
 	 * @return ResultVO result data bean
-	 * @throws Exception
 	 */
 	@Override
-	public ResultPagingVO getAdminRecordListPaged(HashMap<String, Object> options) throws Exception {
+	public ResultPagingVO getAdminRecordListPaged(HashMap<String, Object> options) {
 		ResultPagingVO resultVO = new ResultPagingVO();
 
 		try {
@@ -566,7 +529,7 @@ public class AdminUserServiceImpl implements AdminUserService {
 			long filteredCount = adminUserDao.selectAdminRecordListFilteredCount(options);
 
 			if (re != null && re.size() > 0) {
-				ActHistoryVO[] row = re.stream().toArray(ActHistoryVO[]::new);
+				ActHistoryVO[] row = re.toArray(ActHistoryVO[]::new);
 				resultVO.setData(row);
 				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_SUCCESS, GPMSConstants.CODE_SELECT,
 						MessageSourceHelper.getMessage("system.common.selectdata")));
@@ -583,10 +546,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in getAdminRecordListPaged : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (resultVO != null) {
-				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-			}
+			resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
 		}
 
 		return resultVO;
@@ -618,19 +579,15 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (SQLException sqlEx) {
 			logger.error("error in updateLoginTrialData : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), sqlEx.toString());
-			if (statusVO != null) {
-				statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
-			}
+			statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
 			throw sqlEx;
 		} catch (Exception ex) {
 			TransactionAspectSupport.currentTransactionStatus().setRollbackOnly();
 			logger.error("error in updateLoginTrialData : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (statusVO != null) {
-				statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
-			}
+			statusVO.setResultInfo(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR));
 		}
 		return statusVO;
 	}
@@ -640,19 +597,18 @@ public class AdminUserServiceImpl implements AdminUserService {
 	 *
 	 * @param adminId string user id
 	 * @return ResultVO result data bean
-	 * @throws Exception
 	 */
 	@Override
-	public ResultVO getAdminUserInfo(String adminId) throws Exception {
+	public ResultVO getAdminUserInfo(String adminId) {
 
 		ResultVO resultVO = new ResultVO();
 
 		try {
 			AdminUserVO re = adminUserDao.selectAdminUserInfo(adminId);
 
+			Object[] o = new Object[0];
+			resultVO.setData(o);
 			if (re != null) {
-				Object[] o = new Object[0];
-				resultVO.setData(o);
 				if (!re.getAdminTp().equalsIgnoreCase("S")) {
 					resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
 							MessageSourceHelper.getMessage("admin.result.noinsert")));
@@ -661,8 +617,6 @@ public class AdminUserServiceImpl implements AdminUserService {
 				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_SUCCESS, GPMSConstants.CODE_SELECT,
 						MessageSourceHelper.getMessage("system.common.selectdata")));
 			} else {
-				Object[] o = new Object[0];
-				resultVO.setData(o);
 				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SELECTERROR,
 						MessageSourceHelper.getMessage("system.common.noselectdata")));
 			}
@@ -670,10 +624,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in selectAdminUserInfo : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (resultVO != null) {
-				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-			}
+			resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
 		}
 
 		return resultVO;
@@ -686,24 +638,21 @@ public class AdminUserServiceImpl implements AdminUserService {
 	 * @param adminId string adminId
 	 * @param adminRule String adminRule
 	 * @return ResultVO result data bean
-	 * @throws Exception
 	 */
 	@Override
-	public ResultVO getAuthority(String adminId, String adminRule) throws Exception {
+	public ResultVO getAuthority(String adminId, String adminRule) {
 
 		ResultVO resultVO = new ResultVO();
 
 		try {
 			AdminUserVO re = adminUserDao.selectAdminUserAuthority(adminId, adminRule);
 
+			Object[] o = new Object[0];
+			resultVO.setData(o);
 			if (re != null) {
-				Object[] o = new Object[0];
-				resultVO.setData(o);
 				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_SUCCESS, GPMSConstants.CODE_SELECT,
 						MessageSourceHelper.getMessage("system.common.selectdata")));
 			} else {
-				Object[] o = new Object[0];
-				resultVO.setData(o);
 				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SELECTERROR,
 						MessageSourceHelper.getMessage("system.common.noselectdata")));
 			}
@@ -711,10 +660,8 @@ public class AdminUserServiceImpl implements AdminUserService {
 		} catch (Exception ex) {
 			logger.error("error in getAuthority : {}, {}, {}", GPMSConstants.CODE_SYSERROR,
 					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR), ex.toString());
-			if (resultVO != null) {
-				resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
-						MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
-			}
+			resultVO.setStatus(new StatusVO(GPMSConstants.MSG_FAIL, GPMSConstants.CODE_SYSERROR,
+					MessageSourceHelper.getMessage(GPMSConstants.MSG_SYSERROR)));
 		}
 
 		return resultVO;
